Revert: "non-css parts of gold menu & fix top nav to fit gold in non-default themes & fix spacing in pfsense_ng topnav"

--- a/usr/local/www/themes/metallic/all.css
+++ b/usr/local/www/themes/metallic/all.css
@@ -359,7 +359,8 @@ table#marquee div#container div#scroller {
 #navigation ul li {
 	float: left;
 	position: relative;
-	padding: 0 25px 0 15px;
+	/* width: 7.5em; */
+	width: 7.47em;
 }
 #navigation ul li div {
 	font-size: 1em;
@@ -1099,7 +1100,7 @@ div#log span.log-protocol {
 #login #username, #password, #password2 {
 	font-size: small;
 	width: 60%;
-	padding-left: 19px;
+	padding-left:19px
 	padding: 3px;
 	margin: 0em;
 }
