--- a/usr/local/www/themes/pfsense_ng/all.css
+++ b/usr/local/www/themes/pfsense_ng/all.css
@@ -428,21 +428,20 @@ table#marquee div#container div#scroller {
 #navigation ul li {
 	float: left;
 	position: relative;
-	padding-right: 27px;
+	width: 7.0em;
 	top: 0px;
 }
 
 /* Text mainmenubar */
 #navigation ul li div {
 	background-image: url(images/mainmenu-right.gif);
-	background-position: 2% 50%;
+	background-position: 5% 50%;
 	background-repeat: no-repeat;
 	padding-top:0px;
 	font-size: 12px;
 	font-weight: normal;
 	color: #ffffff;
-	text-align: left;
-	padding-left: 13px;
+	text-align: center;
 	height: 13px;
 }
 
