--- a/usr/local/www/themes/the_wall/all.css
+++ b/usr/local/www/themes/the_wall/all.css
@@ -384,7 +384,7 @@ table#marquee div#container div#scroller {
 #navigation ul li {
 	float: left;
 	position: relative;
-	padding: 0 25px 0 15px;
+	width: 7.5em;
 }
 #navigation ul li div {
 	font-size: 1em;
